--- a/styles.css
+++ b/styles.css
@@ -1,46 +1,49 @@
-/* styles.css */
-body 
+body {
     font-family: Arial, sans-serif;
     margin: 0;
-    padding: 0;
-    background-color: #f2f2f2;
-    overflow-x: hidden;
+    background-color: #dcdcdc;
 }
 
-heade {
+/* Header */
+header {
     background-color: #333;
-    color: #fff;
-    padding: 20px;
+    color: white;
+    padding: 25px;
     text-align: center;
 }
 
+/* Navigation */
+nav {
+    background-color: #eee;
+    padding: 8px 0;
+}
+
 nav ul {
-    list-style-type: none;
+    list-style: none;
     margin: 0;
-    padding: 0;
+    padding-left: 10px;
 }
 
 nav ul li {
     display: inline;
+    margin-right: 20px;
 }
 
 nav ul li a {
     text-decoration: none;
     color: #333;
-    padding: 10px;
 }
 
-main section {
-    margin: 20px;
+/* Main Content */
+main {
+    padding: 20px;
+}
 
-
+/* Footer */
 footer {
-    position: absolute;
-    bottom: 0
-    right: 0;
-    width: 100vw;
     background-color: #333;
-    color: #fff;
-    padding: 10px;
-    text-align center;
+    color: white;
+    text-align: center;
+    padding: 15px;
+    margin-top: 40px;
 }
